<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="channel_id">889</string>
    <string name="channel_name">Downloaded</string>

    <string name="button_name">Download selected Repository</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">Detail Activity</string>

    <string name="please_select_file">Please select file to download!</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="confirm">Confirm</string>
    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="LoadApp">LoadApp - Current repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="download_image">download image</string>
    <string name="fail">Fail</string>
    <string name="success">Success</string>
    <string name="downloaded">Downloaded!</string>
</resources>
